DebugConsole + swagger + users route
